Test Data/WSN/WSN-MELA-3/outputs/wsn-scso/2025-07-18_14-00-18/problem_iter2_stdout_3.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/wsn/main.py", line 7, in <module>
    import gpt  # 自定义的启发式模块
    ^^^^^^^^^^
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\wsn\gpt.py", line 26
    D_elite = np.abs(Best_pos.reshape(1, -1) - Positions
                    ^
SyntaxError: '(' was never closed
